--- a/merrrcadito/src/app/globals.css
+++ b/merrrcadito/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #235E69;
+  --background: #ffffff;
   --foreground: #0e0e0e;
 }
 
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #235E69;
+    --background: #ffffff;
     --foreground: #000000;
   }
 }
