--- a/merrrcadito/src/app/Components/Forms/FormSeccion/formSeccion.module.css
+++ b/merrrcadito/src/app/Components/Forms/FormSeccion/formSeccion.module.css
@@ -30,7 +30,7 @@
     color: #333;
 }
 
-.inputSubcategory{
+.input{
     width: 100%;
     padding: 0.3rem;
     border: 1px solid #ddd;
@@ -51,7 +51,7 @@
   display: block;
 }
 
-.buttonRegSub{
+.buttonAction{
   appearance: none;
   background-color: #2ea44f;
   border: 1px solid rgba(27, 31, 35, .15);
