--- a/merrrcadito/src/Components/Atoms/Buttons/ButtonCancel/ButtonCancel.module.css
+++ b/merrrcadito/src/Components/Atoms/Buttons/ButtonCancel/ButtonCancel.module.css
@@ -2,7 +2,7 @@
     padding: 12px 24px;
     border: none;
     border-radius: 6px;
-    background-color: #6a737d;
+    background-color: #ff0000;
     color: white;
     font-size: 14px;
     font-weight: 600;
@@ -12,7 +12,7 @@
 }
 
 .buttonCancel:hover:not(:disabled) {
-    background-color: #5a6268;
+    background-color: rgb(244, 38, 38);
     transform: translateY(-1px);
 }
 
