--- a/merrrcadito/src/Components/Molecules/SeccionCard/SeccionCard.module.css
+++ b/merrrcadito/src/Components/Molecules/SeccionCard/SeccionCard.module.css
@@ -54,11 +54,8 @@
     border-radius: 8px;
     overflow: hidden;
     border: 1px solid #e0e0e0;
-    background-size: cover; /* Ajusta la imagen al contenedor */
-    background-position: center; /* Centra la imagen */
+    background-size: cover; 
+    background-position: center; 
     background-repeat: no-repeat;
 }
 
-.image {
-    display: none; /* Oculta la img normal */
-}
